--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
         <p class="enrich-desc">Rate each enriched place 0–100 for Brazilian likelihood. Conservative scoring — reduces false positives.</p>
         <div class="button-row">
           <button id="btn-score" class="btn btn-primary">⭐ Score All Pending</button>
-          <a href="/static/map.html" class="btn btn-secondary">🗺 View Map</a>
+          <a href="/" class="btn btn-secondary">🗺 View Map</a>
         </div>
         <div id="score-status" class="run-info">
           <span id="stat-scored">—</span> scored &nbsp;·&nbsp;
